--- a/app/Presenter/templates/Layout/navigation.latte
+++ b/app/Presenter/templates/Layout/navigation.latte
@@ -56,7 +56,7 @@
                             <div class="dropdown-menu">
                                 <ul>
                                     <li n:if="$user->isInRole('admin')">
-                                        <a n:href=":Admin:Manage:default">{_navbar.administration}</a>
+                                        <a n:href=":Admin:Dashboard:default">{_navbar.administration}</a>
                                     </li>
                                     <li><a n:href="User:Calendar">{_navbar.myCalendar}</a></li>
                                     <li><a n:href="User:ChangePassword">{_navbar.changePassword}</a></li>
