--- a/app/Modules/Admin/Presenter/templates/@layout.latte
+++ b/app/Modules/Admin/Presenter/templates/@layout.latte
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="{$basePath}/assets/css/calendar.css">
     <link rel="stylesheet" href="{$basePath}/assets/css/calendar_custom.css">
     <link rel="stylesheet" href="{$basePath}/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/happy-inputs@2.0.4/src/happy.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ublaboo-datagrid@6.9.1/assets/datagrid.css">
 </head>
 
 <body>
@@ -80,6 +83,12 @@
         });
 
     </script>
+    <!-- It is recommended to include this JS file with just a few bits. It refreshes URL on non ajax request -->
+    <script src="https://cdn.jsdelivr.net/npm/ublaboo-datagrid@6.9.1/assets/datagrid-instant-url-refresh.js"></script>
+
+    <!-- Use this little extension for ajax spinners -->
+    <script src="https://cdn.jsdelivr.net/npm/ublaboo-datagrid@6.9.1/assets/datagrid-spinners.js"></script>
+
 {/block}
 {snippet flashMessages}
     <script n:inner-foreach="$flashes as $flash">
