--- a/app/Modules/Admin/Presenter/templates/Restrictions/default.latte
+++ b/app/Modules/Admin/Presenter/templates/Restrictions/default.latte
@@ -1,3 +1,5 @@
 {block content}
-Restrictions
+    <a href="#" class="btn btn-info btn-xl" style="margin-right: 15px;margin-bottom: 20px; float: right"><span
+                class="fa fa-plus"></span>Vytvorit omezeni</a>
+{control grid}
 {/block}
