Added: Add news form

--- a/app/Modules/Admin/Presenter/templates/@layout.latte
+++ b/app/Modules/Admin/Presenter/templates/@layout.latte
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="{$basePath}/assets/css/calendar_custom.css">
     <link rel="stylesheet" href="{$basePath}/assets/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ublaboo-datagrid@6.9.1/assets/datagrid.css">
+    <script src="https://cdn.tiny.cloud/1/zpab8ria7pivuow3ew34v5i2zk1dm8t3inewbbjwjfcdip2y/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 
 <body>
