--- a/app/Modules/Admin/Presenter/templates/News/default.latte
+++ b/app/Modules/Admin/Presenter/templates/News/default.latte
@@ -1,5 +1,5 @@
 {block content}
-    <a href="#" class="btn btn-info btn-xl" style="margin-right: 15px;margin-bottom: 20px; float: right"><span
+    <a n:href="News:Create" class="btn btn-info btn-xl" style="margin-right: 15px;margin-bottom: 20px; float: right"><span
                 class="fa fa-plus"></span>Vytvorit novinku</a>
     {control grid}
 {/block}
