Added: Edit news

--- a/app/Modules/Admin/Component/Form/News/default.latte
+++ b/app/Modules/Admin/Component/Form/News/default.latte
@@ -1,6 +1,6 @@
 {form form}
-    {label title /}{input title}<br>
-    {label onHomepage /}{input onHomepage}<br>
+    {label name /}{input name}<br>
+    {label show_homepage /}{input show_homepage}<br>
     {input text}<br>
     {input confirm}<br>
 {/form}
