--- a/app/Presenter/templates/Homepage/default.latte
+++ b/app/Presenter/templates/Homepage/default.latte
@@ -42,10 +42,7 @@
     <section id="feature" n:if="$lastNews">
         <div class="container">
             <div class="wow animate__animated animate__fadeInUp section-heading">
-                <h1 class="title">{$lastNews->name}</h1>
-
                 {$lastNews->text|noescape}
-
             </div>
         </div>
     </section>
@@ -53,7 +50,7 @@
     {* Medical effects*}
     <section id="feature" class="works">
         <div class="container">
-            <div class="section-heading wow animate__animated animate__fadeInUp">
+            <div class="section-heading wow animate__animated animate__fadeInUp" style="text-align: center;">
                 <h1 class="title">Vítáme vás</h1>
                 <p>
                     Vítejte v naší solné jeskyni, kde můžete najít útočiště před každodenním shonem a stresy moderního
