--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -31,7 +31,7 @@ a:hover {
   text-decoration: none;
 }
 .section-heading {
-  text-align: center;
+  /*text-align: center;*/
   margin-bottom: 65px;
 }
 .section-heading p {
