--- a/app/Modules/Admin/Presenter/templates/@layout.latte
+++ b/app/Modules/Admin/Presenter/templates/@layout.latte
@@ -31,7 +31,9 @@
     <link rel="stylesheet" href="{$basePath}/assets/css/calendar_custom.css">
     <link rel="stylesheet" href="{$basePath}/assets/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ublaboo-datagrid@6.9.1/assets/datagrid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.1.4/css/bootstrap-datetimepicker.min.css">
     <script src="https://cdn.tiny.cloud/1/zpab8ria7pivuow3ew34v5i2zk1dm8t3inewbbjwjfcdip2y/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
 </head>
 
 <body>
@@ -74,7 +76,7 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{$basePath}/assets/js/oaza.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.1.4/js/bootstrap-datetimepicker.min.js"></script>
     <script>
         document.getElementById("year").innerHTML = 2017 + " - " + new Date().getFullYear().toString();
         Fancybox.bind('[data-fancybox="gallery"]', {
