--- a/app/Presenter/templates/Contact/default.latte
+++ b/app/Presenter/templates/Contact/default.latte
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row address-details">
         <div class="col-md-8  wow fadeInLeft">
-            {control contactUs}
+            {control contactUsForm}
         </div>
         <div class="col-md-4">
             <div class="address wow fadeInRight" data-wow-duration="500ms" data-wow-delay=".3s">
