--- a/app/Presenter/templates/User/changePassword.latte
+++ b/app/Presenter/templates/User/changePassword.latte
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2" style="min-height: 45vh;">
-                    {control changePassword}
+                    {control changePasswordForm}
                 </div>
             </div>
         </div>
