Changed: News with new db structure

--- a/app/Modules/Admin/Component/Form/News/default.latte
+++ b/app/Modules/Admin/Component/Form/News/default.latte
@@ -1,7 +1,8 @@
 {form form}
-    {label name /}{input name}<br>
-    {label show_homepage /}{input show_homepage}<br>
     {input text}<br>
+    {label display_on_homepage /}{input display_on_homepage}<br>
+    {label is_draft /}{input is_draft}<br>
+
     {input confirm}<br>
 {/form}
 {block scripts}
