--- a/app/Modules/Admin/Component/Form/Restriction/default.latte
+++ b/app/Modules/Admin/Component/Form/Restriction/default.latte
@@ -11,15 +11,22 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            {label message /}
-            {input message, rows => '5'}
+            {label text /}
+            {input text, rows => '5'}
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-md-12">
-            {label showNewsOnHomepage /}
-            {input showNewsOnHomepage}
+            {label createNews /}
+            {input createNews, class => "form-control"}
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            {label display_on_homepage /}
+            {input display_on_homepage, class => "form-control"}
         </div>
     </div>
     <br>
