Telephone number fix

--- a/app/Component/Form/Reservation/default.latte
+++ b/app/Component/Form/Reservation/default.latte
@@ -3,7 +3,12 @@
         {if !$user->isLoggedIn()}
             {label email /}<span style="color: red;"> *</span> {input email}<br>
             {label name /}<span style="color: red;"> *</span> {input name}<br>
-            {label telefon /}<span style="color: red;"> *</span> {input telefon}<br>
+            {label telefon /}
+            <div class="input-group">
+                <span class="input-group-addon" id="basic-addon3">+420</span>
+                {input telefon, class:"form-control"}
+            </div>
+            <br>
         {/if}
         {label count /}<span style="color: red;"> *</span> {input count}<br>
         {label child /}<span style="color: red;"> *</span> {input child}<br>
