--- a/src/app/Component/Form/Auth/Login/default.latte
+++ b/src/app/Component/Form/Auth/Login/default.latte
@@ -1,4 +1,4 @@
-{form loginForm}
+{form form}
     {label email /}<span style="color: red;"> *</span> {input email, class:"form-control"}<br>
     {label password /}<span style="color: red;"> *</span> {input password, class:"form-control"}<br>
     {input send}
