--- a/src/app/Component/Form/Reservation/default.latte
+++ b/src/app/Component/Form/Reservation/default.latte
@@ -1,4 +1,4 @@
-{form reservationForm}
+{form form}
     <div class="modal-body">
         {if !$user->isLoggedIn()}
             {label email /}<span style="color: red;"> *</span> {input email}<br>
