--- a/src/app/Presenter/templates/Layout/modals.latte
+++ b/src/app/Presenter/templates/Layout/modals.latte
@@ -29,9 +29,9 @@
                     <h4 class="modal-title decored-text">Detail</h4>
                 </div>
                 <div class="modal-body">
-                    <strong class="decored-text">Rezervace: </strong><h4 id="rezervationDate"></h4>
+                    <strong class="decored-text">Rezervace: </strong><h4 id="date"></h4>
                     <strong class="decored-text">Počet míst: </strong><h4 id="totalCount"></h4>
-                    <strong class="decored-text">Děti: </strong><h4 id="child"></h4>
+                    <strong class="decored-text">Děti: </strong><h4 id="hasChildren"></h4>
                     <strong class="decored-text">Komentář: </strong><h4 id="comment"></h4>
                     <input type="submit" name="send" class="btn btn-danger btn-sm fh5co-btn-icon"
                            value="Zrušit rezervaci"
@@ -68,10 +68,10 @@
                     <h4 class="modal-title decored-text" id="detailId"></h4>
                 </div>
                 <div class="modal-body">
-                    <strong class="decored-text">Rezervace: </strong><h4 id="rezervationDate"></h4>
+                    <strong class="decored-text">Rezervace: </strong><h4 id="date"></h4>
                     <strong class="decored-text">Jméno: </strong><h4 id="userName"></h4>
                     <strong class="decored-text">Počet míst: </strong><h4 id="totalCount"></h4>
-                    <strong class="decored-text">Děti: </strong><h4 id="child"></h4>
+                    <strong class="decored-text">Děti: </strong><h4 id="hasChildren"></h4>
                     <strong class="decored-text">Tel.č: </strong><h4 id="telephone"></h4>
                     <strong class="decored-text">E-mail: </strong><h4 id="email"></h4>
                     <strong class="decored-text">Komentář: </strong><h4 id="comment"></h4>
