--- a/src/app/Component/Form/Reservation/default.latte
+++ b/src/app/Component/Form/Reservation/default.latte
@@ -3,15 +3,15 @@
         {if !$user->isLoggedIn()}
             {label email /}<span style="color: red;"> *</span> {input email}<br>
             {label name /}<span style="color: red;"> *</span> {input name}<br>
-            {label telefon /}
+            {label telephone /}
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon3">+420</span>
-                {input telefon, class:"form-control"}
+                {input telephone, class:"form-control"}
             </div>
             <br>
         {/if}
         {label count /}<span style="color: red;"> *</span> {input count}<br>
-        {label child /}<span style="color: red;"> *</span> {input child}<br>
+        {label has_children /}<span style="color: red;"> *</span> {input has_children}<br>
         {label comment /}{input comment}<br>
     </div>
     <div class="modal-footer">
