--- a/src/app/Model/Service/Mail/templates/passwordChanged.latte
+++ b/src/app/Model/Service/Mail/templates/passwordChanged.latte
@@ -1,26 +1,7 @@
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>OAZA</title>
-</head>
-<body>
-<h1 style="color: #00bcd4">  <img src="https://oazahb.cz/images/logo.png">OAZA</h1>
-<br>
-
-<p>
-Dobrý den,<br><br>
-Heslo k Vašemu účtu bylo úspěšně zmněneno.
-
-<br><br><br>
-<hr>
- <strong style="color: #00bcd4">Solná jeskyně OÁZA</strong><br>
-    Marie Roztočilová<br>
-    Chotěbořská 2943<br>
-    580 01 Havlíčkův Brod<br>
-    IČ: 75869896<br><br>
-
-    E-mail: info@oazahb.cz<br>
-    Telefon: 727 813 359
-</p>
-</body>
-</html>
+{extends '@layout.latte'}
+{block content}
+    <h4>Dobrý den,</h4>
+    <p>heslo k Vašemu účtu bylo <strong>úspěšně změněno</strong>.</p>
+    <p>Pokud jste tuto změnu neprovedli Vy, doporučujeme ihned kontaktovat naši podporu.</p>
+    <p>V případě dotazů jsme Vám k dispozici na <a href="mailto:info@oazahb.cz">info@oazahb.cz</a>.</p>
+{/block}
