--- a/src/app/Model/Service/Mail/templates/canceled.latte
+++ b/src/app/Model/Service/Mail/templates/canceled.latte
@@ -1,26 +1,7 @@
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>OAZA</title>
-</head>
-<body>
-<h1 style="color: #00bcd4">  <img src="https://oazahb.cz/images/logo.png">OAZA</h1>
-<br>
-
-<p>
-Dobrý den,<br><br>
-Vaše rezervace byla úspěšně zrušena.
-
-<br><br><br>
-<hr>
- <strong style="color: #00bcd4">Solná jeskyně OÁZA</strong><br>
-    Marie Roztočilová<br>
-    Chotěbořská 2943<br>
-    580 01 Havlíčkův Brod<br>
-    IČ: 75869896<br><br>
-
-    E-mail: info@oazahb.cz<br>
-    Telefon: 727 813 359
-</p>
-</body>
-</html>
+{extends '@layout.latte'}
+{block content}
+    <h4>Dobrý den,</h4>
+    <p>vaše rezervace byla <strong>úspěšně zrušena</strong>.</p>
+    <p>Pokud došlo ke zrušení omylem, nebo byste chtěli vytvořit novou rezervaci, neváhejte nás kontaktovat.</p>
+    <p>Děkujeme a přejeme hezký den.</p>
+{/block}
