--- a/src/app/Model/Service/Mail/templates/newPassword.latte
+++ b/src/app/Model/Service/Mail/templates/newPassword.latte
@@ -1,26 +1,13 @@
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>OAZA</title>
-</head>
-<body>
-<h1 style="color: #00bcd4">  <img src="https://oazahb.cz/images/logo.png">OAZA</h1>
-<br>
+{extends '@layout.latte'}
+{block content}
+    <h4>Dobrý den,</h4>
+    <p>na základě Vašeho požadavku jsme Vám vygenerovali nové dočasné heslo:</p>
 
-<p>
-Dobrý den,<br><br>
-Vaše dočasné heslo je: {$password}
-
-<br><br><br>
-<hr>
- <strong style="color: #00bcd4">Solná jeskyně OÁZA</strong><br>
-    Marie Roztočilová<br>
-    Chotěbořská 2943<br>
-    580 01 Havlíčkův Brod<br>
-    IČ: 75869896<br><br>
-
-    E-mail: info@oazahb.cz<br>
-    Telefon: 727 813 359
-</p>
-</body>
-</html>
+    <div class="details">
+        <strong>{$password}</strong>
+    </div>
+    <p>
+        Po přihlášení doporučujeme co nejdříve heslo změnit v nastavení Vašeho účtu,
+        abyste si zajistili plný přístup a bezpečnost.
+    </p>
+{/block}
