minor changes & fixes

--- a/src/app/Model/Service/Mail/templates/canceledByAdmin.latte
+++ b/src/app/Model/Service/Mail/templates/canceledByAdmin.latte
@@ -5,9 +5,9 @@
         Vaše rezervace byla zrušena administrátorem.
     </p>
     <div class="details">
-        <p><strong>Jméno a příjmení:</strong> {$fullName}</p>
-        <p><strong>Datum:</strong> {$date|date: "j.n.Y H:i"}</p>
-        <p><strong>Počet míst:</strong> {$count}</p>
+        <strong>Jméno a příjmení:</strong> {$fullName}<br>
+        <strong>Datum:</strong> {$date|date: "j.n.Y H:i"}<br>
+        <strong>Počet míst:</strong> {$count}
     </div>
     <p>
         Chápeme, že tato změna může být nepříjemná, a velmi se omlouváme za případné komplikace.
