escape message from contact form.

--- a/src/app/Model/Service/Mail/templates/contact.latte
+++ b/src/app/Model/Service/Mail/templates/contact.latte
@@ -5,7 +5,7 @@
     <p>obdrželi jste nový dotaz od uživatele <strong>{$from}</strong>:</p>
 
     <div class="details">
-        {$message|noescape}
+        {$message}
     </div>
 
     <p>
